//
//  Constants.swift
//  ImageFeed
//
//  Created by Muhammed Nurmukhanov on 07.06.2025.
//

import Foundation

enum HTTPMethod: String {
    case get = "GET"
    case post = "POST"
    case put = "PUT"
    case delete = "DELETE"
}

enum AppDateFormatters {
    static let photoListFormatter: DateFormatter = {
        let formatter = DateFormatter()
        formatter.dateStyle = .long
        formatter.timeStyle = .none
        return formatter
    }()

    static let iso8601: ISO8601DateFormatter = {
        let formatter = ISO8601DateFormatter()
        return formatter
    }()
}

enum AccessibilityIdentifiers: String {
    case webView = "UnsplashWebView"
    case likeButtonOn = "likeButtonOn"
    case likeButtonOff = "likeButtonOff"
    case logoutAlert = "byeALert"
    case exitButton = "exitButton"
}
