...
                                <connections>
                                    <outlet property="delegate" destination="tX1-5c-CL7" id="fal-in-bFG"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6tG-Aq-OcY" userLabel="Back Button">
                                <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonBackward"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="7oE-lB-BXZ"/>
                                    <constraint firstAttribute="height" constant="48" id="FI9-Wc-w0k"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="button_backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="Xk9-Rr-Bgn"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MlK-rr-Kr9">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="j5h-SM-nKS"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFPro-Bold" family="SF Pro" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
