...
    }
    
    @objc private func clickToExitButton() {
        let alertModel = AlertModel(
            title: "Выйти из профиля?",
            message: "Вы уверены, что хотите выйти?",
            buttonText: "Да") {
                self.presenter?.didTapLogout()
            }
        
        let alertPresenter = AlertPresenter(viewController: self)
        alertPresenter.showAlert(alert: alertModel, accessibilityIdentifier: AccessibilityIdentifiers.logoutAlert.rawValue)
    }
...
